recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:3: error: too many arguments for method avance: (x$1: Double)Unit
 avance(100,100)
       ^